@@ -7,6 +7,8 @@ Visit http://ultimarom.com for downloads, information and themed Google apps pac
 
 CHANGELOG 
 ---------
+### UltimaMod - v2.0.1 Folkvangr
+* Updated to latest CyanogenMod sources
 
 ### UltimaMod - v2.0 Folkvangr
 * Changed base to CyanogenMod 11 (latest sources as of build time) - Should make for quicker updates
@@ -15,6 +17,7 @@ CHANGELOG
 * Added call recording as default for all devices (Cyanogen limit this per region, which is unnecessary)
 * Added Traffic Meter and controls to SystemUI
 * Added Recents panel controls (Clear all button position and RAM bar)
+* Added battery color, text and font controls
 * Added clock option: AM/PM indicator, colour and day of week
 * Added F-Droid option in the installer, for those who don't want Google Apps.
 * Added DisconnectMobile option in the installer
